# Sistema-TCC

./: CMakeLists.txt  Menu.cpp  Menu.h  README.md  RegistrationsHistory.cpp  RegistrationsHistory.h  RegistrationsHistory.txt  main.cpp
CRUD/: Delete.cpp  Delete.h  Register.cpp  Register.h  Search.cpp  Search.h  Update.cpp  Update.h  View.cpp  View.h
Data/: Advisor.cpp  Advisor.h  Details.cpp  Details.h  Evaluator.cpp  Evaluator.h  Frequency.cpp  Frequency.h  Student.cpp  Student.h  TCC.cpp  TCC.h
JSON/: ManipulateJson.cpp  ManipulateJson.h  json.hpp  tccDATA.json
